frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: ingress2tier
spec:
  ingressClassName: nginx
  rules:
  - host: 
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: ingressreact
            port:
              number: 3000
